--- a/index.html
+++ b/index.html
@@ -655,5 +655,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
