--- a/Residences.html
+++ b/Residences.html
@@ -306,6 +306,7 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+        <script scr="script.js"></script>
 
                 
 </body>
