--- a/Login.html
+++ b/Login.html
@@ -308,5 +308,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
