--- a/Register.html
+++ b/Register.html
@@ -344,5 +344,6 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
+        <script scr="script.js"></script>
     </body>
 </html>
