--- a/assets/html/Register.html
+++ b/assets/html/Register.html
@@ -33,7 +33,7 @@
                     <ul class="nav__list">
 
                         <li class="nav__item">
-                            <a href="index.html" class="nav__link  active-link">
+                            <a href="/assets/html/index.html" class="nav__link  active-link">
                                 <i class='bx bx-home-alt-2'></i>
                                 <span>Home</span>
 
@@ -41,7 +41,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="Residences.html" class="nav__link">
+                            <a href="/assets/html/Residences.html" class="nav__link">
                                 <i class='bx bx-building-house'></i>
                                 <span>Residences</span>
 
@@ -208,7 +208,7 @@
                                                 </a>
                                             </div>
                                             <div class="my-form-login-link">
-                                                <a href="login.html" title="Create Account" >
+                                                <a href="/assets/html/login.html" title="Create Account" >
                                                     Login Now
                                                  </a>
                                             </div>
