--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="Register.html" class="nav__link">
+                            <a href="/assets/html/Register.html" class="nav__link">
                                 <i class='bx bx-user'></i>
                                 <span>Create Account</span>
                             </a>
@@ -273,7 +273,7 @@
                                 <i class='bx bx-chevron-right'></i>
                             </div>
                             <div class="swiper-button-show-more">
-                                <a href="Residences.html"
+                                <a href="assets/html/Residences.html"
                                     class="residence-button " id="button">Show
                                     More</a>
                             </div>
@@ -527,7 +527,7 @@
                         Subsrcibe and find super attractive price
                         quotes from us, Find your residence soon.
                     </p>
-                    <a href="Login.html" class="button subscribe__button">
+                    <a href="/assets/html/Login.html" class="button subscribe__button">
                         Get Started
                     </a>
                 </div>
