--- a/assets/html/Login.html
+++ b/assets/html/Login.html
@@ -33,7 +33,7 @@
                     <ul class="nav__list">
 
                         <li class="nav__item">
-                            <a href="index.html" class="nav__link  active-link">
+                            <a href="/assets/html/index.html" class="nav__link  active-link">
                                 <i class='bx bx-home-alt-2'></i>
                                 <span>Home</span>
 
@@ -41,7 +41,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#Residences.html" class="nav__link">
+                            <a href="/assets/html/Residences.html" class="nav__link">
                                 <i class='bx bx-building-house'></i>
                                 <span>Residences</span>
 
@@ -176,7 +176,7 @@
                                             <a href="#" title="Reset Passward">
                                                 Forget Passward
                                             </a>
-                                            <a href="Register.html" title="Create Account" >
+                                            <a href="/assets/html/Register.html" title="Create Account" >
                                                Sing up 
                                             </a>
                                         </div>
