All file changes

--- a/Residences.html
+++ b/Residences.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png"
+      <link rel="shortcut icon" href="favicon.png"
       type="image/x-icon">
 
   <!--=============== BOXICONS ===============-->
@@ -13,10 +13,10 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
   <!--=============== SWIPER CSS ===============-->
-  <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="swiper-bundle.min.css">
 
   <!--=============== CSS ===============-->
-  <link rel="stylesheet" href="assets/css/residence.css">
+  <link rel="stylesheet" href="residence.css">
 
     <title>Residences</title>
 </head>
@@ -77,7 +77,7 @@
                     <div class="popular__container swiper">
                         <div class="swiper-wrapper">
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular1.jpg" alt
+                                <img src="popular1.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -95,7 +95,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular2.jpg" alt
+                                <img src="popular2.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -113,7 +113,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular3.jpg" alt
+                                <img src="popular3.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -131,7 +131,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular4.jpg" alt
+                                <img src="popular4.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -149,7 +149,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular5.jpg" alt
+                                <img src="popular5.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -302,11 +302,11 @@
         <script src></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src="/assets/js/swiper-bundle.min.js"></script>
+        <script src="swiper-bundle.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
-        <script scr="assets/js/script.js"></script>
+        <script src="main.js"></script>
+        <script scr="js/script.js"></script>
 
                 
 </body>
