--- a/Register.html
+++ b/Register.html
@@ -208,7 +208,7 @@
                                                 </a>
                                             </div>
                                             <div class="my-form-login-link">
-                                                <a href="login.html" title="Create Account" >
+                                                <a href="Login.html" title="Create Account" >
                                                     Login Now
                                                  </a>
                                             </div>
