minar code changes

--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="Login.css">
+        <link rel="stylesheet" href="login.css">
 
         <title>Home Land</title>
     </head>
