--- a/assets/html/Residences.html
+++ b/assets/html/Residences.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="favicon.png"
+      <link rel="shortcut icon" href="/assets/css/favicon.png"
       type="image/x-icon">
 
   <!--=============== BOXICONS ===============-->
@@ -13,10 +13,10 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
   <!--=============== SWIPER CSS ===============-->
-  <link rel="stylesheet" href="swiper-bundle.min.css">
+  <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
 
   <!--=============== CSS ===============-->
-  <link rel="stylesheet" href="residence.css">
+  <link rel="stylesheet" href="/assets/css/residence.css">
 
     <title>Residences</title>
 </head>
@@ -25,7 +25,7 @@
         <!--==================== HEADER ====================-->
         <header class="header-residence" id="header">
             <nav class="nav container">
-                <a href="index.html" class="nav__logo">
+                <a href="/assets/html/index.html" class="nav__logo">
                     Home Land <i class='bx bxs-home-alt-2'></i>
                 </a>
 
@@ -33,7 +33,7 @@
                     <ul class="nav__list">
 
                         <li class="nav__item">
-                            <a href="index.html" class="nav__link  active-link">
+                            <a href="/assets/html/index.html" class="nav__link  active-link">
                                 <i class='bx bx-home-alt-2'></i>
                                 <span>Home</span>
 
@@ -54,13 +54,19 @@
 
                             </a>
                         </li>
+                        <li class="nav__item">
+                            <a href="/assets/html/Register.html" class="nav__link">
+                                <i class='bx bx-user'></i>
+                                <span>Create Account</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
                 <!-- Theme change button -->
                 <i class='bx bx-moon  change-theme' id="theme-button"></i>
 
-                <a href="Register.html" id="login_signup" class="button nav__button">Sign Up / Login</a>
+                <!-- <a href="/assets/html/Register.html" id="login_signup" class="button nav__button">Sign Up / Login</a> -->
             </nav>
         </header>
 
@@ -77,7 +83,7 @@
                     <div class="popular__container swiper">
                         <div class="swiper-wrapper">
                             <article class="popular__card swiper-slide">
-                                <img src="popular1.jpg" alt
+                                <img src="/assets/img/popular1.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -95,7 +101,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular2.jpg" alt
+                                <img src="/assets/img/popular2.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -113,7 +119,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular3.jpg" alt
+                                <img src="/assets/img/popular3.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -131,7 +137,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular4.jpg" alt
+                                <img src="/assets/img/popular4.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -149,7 +155,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular5.jpg" alt
+                                <img src="/assets/img/popular5.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -302,11 +308,11 @@
         <script src></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src="swiper-bundle.min.js"></script>
+        <script src="/assets/js/swiper-bundle.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="main.js"></script>
-        <script scr="js/script.js"></script>
+        <script src="/assets/js/main.js"></script>
+        <script scr="/assets/js/js/script.js"></script>
 
                 
 </body>
