--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="favicon.png"
+        <link rel="shortcut icon" href="/assets/css/favicon.png"
             type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
@@ -13,10 +13,10 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
             rel='stylesheet'>
         <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="swiper-bundle.min.css">
+        <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/assets/css/styles.css">
 
         <title>Home Land</title>
     </head>
@@ -63,7 +63,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="Register.html" class="nav__link">
+                            <a href="/assets/html/Register.html" class="nav__link">
                                 <i class='bx bx-user'></i>
                                 <span>Create Account</span>
                             </a>
@@ -139,7 +139,7 @@
                         <div class="home__orbe-container">
                             <div class="home__orbe">
                                 <div class="home__img">
-                                    <img src="home.jpg" alt>
+                                    <img src="/assets/img/home.jpg" alt>
                                 </div>
                             </div>
                         </div>
@@ -152,16 +152,16 @@
             <section class="logos section">
                 <div class="logos__container container grid">
                     <div class="logos-img">
-                        <img src="logo1.png" alt>
+                        <img src="/assets/img/logo1.png" alt>
                     </div>
                     <div class="logos-img">
-                        <img src="logo2.png" alt>
+                        <img src="/assets/img/logo2.png" alt>
                     </div>
                     <div class="logos-img">
-                        <img src="logo3.png" alt>
+                        <img src="/assets/img/logo3.png" alt>
                     </div>
                     <div class="logos-img">
-                        <img src="logo4.png" alt>
+                        <img src="/assets/img/logo4.png" alt>
                     </div>
                 </div>
 
@@ -178,7 +178,7 @@
                     <div class="popular__container swiper">
                         <div class="swiper-wrapper">
                             <article class="popular__card swiper-slide">
-                                <img src="popular1.jpg" alt
+                                <img src="/assets/img/popular1.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -196,7 +196,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular2.jpg" alt
+                                <img src="/assets/img/popular2.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -214,7 +214,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular3.jpg" alt
+                                <img src="/assets/img/popular3.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -232,7 +232,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular4.jpg" alt
+                                <img src="/assets/img/popular4.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -250,7 +250,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="popular5.jpg" alt
+                                <img src="/assets/img/popular5.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -273,7 +273,7 @@
                                 <i class='bx bx-chevron-right'></i>
                             </div>
                             <div class="swiper-button-show-more">
-                                <a href="Residences.html"
+                                <a href="/assets/html/Residences.html"
                                     class="residence-button " id="button">Show
                                     More</a>
                             </div>
@@ -294,7 +294,7 @@
                         <div class="value__orbe"></div>
 
                         <div class="value__img">
-                            <img src="value.jpg" alt>
+                            <img src="/assets/img/value.jpg" alt>
                         </div>
                     </div>
 
@@ -417,7 +417,7 @@
                         <div class="contact__orbe"></div>
 
                         <div class="contact__img">
-                            <img src="contact.png" alt>
+                            <img src="/assets/img/contact.png" alt>
                         </div>
                     </div>
 
@@ -527,7 +527,7 @@
                         Subsrcibe and find super attractive price
                         quotes from us, Find your residence soon.
                     </p>
-                    <a href="Login.html" class="button subscribe__button">
+                    <a href="/assets/html/Register.html" class="button subscribe__button">
                         Get Started
                     </a>
                 </div>
@@ -651,10 +651,10 @@
         <script src></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src="swiper-bundle.min.js"></script>
+        <script src="/assets/js/swiper-bundle.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="main.js"></script>
-        <script src="script.js"></script>
+        <script src="/assets/js/main.js"></script>
+        <script src="/assets/js/script.js"></script>
     </body>
 </html>
