--- a/Residences.html
+++ b/Residences.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="/assets/css/favicon.png"
+      <link rel="shortcut icon" href="favicon.png"
       type="image/x-icon">
 
   <!--=============== BOXICONS ===============-->
@@ -13,10 +13,10 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
       rel='stylesheet'>
   <!--=============== SWIPER CSS ===============-->
-  <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="swiper-bundle.min.css">
 
   <!--=============== CSS ===============-->
-  <link rel="stylesheet" href="/assets/css/residence.css">
+  <link rel="stylesheet" href="residence.css">
 
     <title>Residences</title>
 </head>
@@ -25,7 +25,7 @@
         <!--==================== HEADER ====================-->
         <header class="header-residence" id="header">
             <nav class="nav container">
-                <a href="/assets/html/index.html" class="nav__logo">
+                <a href="index.html" class="nav__logo">
                     Home Land <i class='bx bxs-home-alt-2'></i>
                 </a>
 
@@ -33,7 +33,7 @@
                     <ul class="nav__list">
 
                         <li class="nav__item">
-                            <a href="/assets/html/index.html" class="nav__link  active-link">
+                            <a href="index.html" class="nav__link  active-link">
                                 <i class='bx bx-home-alt-2'></i>
                                 <span>Home</span>
 
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="/assets/html/Register.html" class="nav__link">
+                            <a href="Register.html" class="nav__link">
                                 <i class='bx bx-user'></i>
                                 <span>Create Account</span>
                             </a>
@@ -83,7 +83,7 @@
                     <div class="popular__container swiper">
                         <div class="swiper-wrapper">
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular1.jpg" alt
+                                <img src="popular1.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -101,7 +101,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular2.jpg" alt
+                                <img src="popular2.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -119,7 +119,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular3.jpg" alt
+                                <img src="popular3.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -137,7 +137,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular4.jpg" alt
+                                <img src="popular4.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -155,7 +155,7 @@
                             </article>
 
                             <article class="popular__card swiper-slide">
-                                <img src="/assets/img/popular5.jpg" alt
+                                <img src="popular5.jpg" alt
                                     class="popular__img">
 
                                 <div class="popular__data">
@@ -308,11 +308,11 @@
         <script src></script>
 
         <!--=============== SWIPER JS ===============-->
-        <script src="/assets/js/swiper-bundle.min.js"></script>
+        <script src="swiper-bundle.min.js"></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="/assets/js/main.js"></script>
-        <script scr="/assets/js/js/script.js"></script>
+        <script src="main.js"></script>
+        <script scr="js/script.js"></script>
 
                 
 </body>
