--- a/Residences.html
+++ b/Residences.html
@@ -77,103 +77,97 @@
                 <div class="">
                     <span class="section__subtitle">Best Choice</span>
                     <h2 class="section__title">
-                        Popular Residences<span></span>
+                        Popular Residences
                     </h2>
 
-                    <div class="popular__container swiper">
-                        <div class="swiper-wrapper">
-                            <article class="popular__card swiper-slide">
-                                <img src="popular1.jpg" alt
-                                    class="popular__img">
-
-                                <div class="popular__data">
-                                    <h2 class="popular__price">
-                                        <span>INR </span>1.2 Cr
-                                    </h2>
-                                    <h3 class="popular__title">
-                                        Garden City Assat
-                                    </h3>
-                                    <p class="popular__description">
-                                        Street The Garden City of Miraflores,
-                                        Sector - 12 , Noida.
-                                    </p>
-                                </div>
-                            </article>
-
-                            <article class="popular__card swiper-slide">
-                                <img src="popular2.jpg" alt
-                                    class="popular__img">
-
-                                <div class="popular__data">
-                                    <h2 class="popular__price">
-                                        <span>INR </span>1 Cr
-                                    </h2>
-                                    <h3 class="popular__title">
-                                        Gables Luxurious House
-                                    </h3>
-                                    <p class="popular__description">
-                                        Street The Garden City of Miraflores,
-                                        Delhi , New Delhi.
-                                    </p>
-                                </div>
-                            </article>
-
-                            <article class="popular__card swiper-slide">
-                                <img src="popular3.jpg" alt
-                                    class="popular__img">
-
-                                <div class="popular__data">
-                                    <h2 class="popular__price">
-                                        <span>INR </span>70 Lakh
-                                    </h2>
-                                    <h3 class="popular__title">
-                                        Garden Orchard City
-                                    </h3>
-                                    <p class="popular__description">
-                                        Street The Garden City of Miraflores,
-                                        Mumbai, Navi-Mumbai.
-                                    </p>
-                                </div>
-                            </article>
-
-                            <article class="popular__card swiper-slide">
-                                <img src="popular4.jpg" alt
-                                    class="popular__img">
-
-                                <div class="popular__data">
-                                    <h2 class="popular__price">
-                                        <span>INR </span>2 Cr
-                                    </h2>
-                                    <h3 class="popular__title">
-                                        Luxurious City Garden
-                                    </h3>
-                                    <p class="popular__description">
-                                        Street The Garden City of Miraflores,
-                                        Meerut.
-                                    </p>
-                                </div>
-                            </article>
-
-                            <article class="popular__card swiper-slide">
-                                <img src="popular5.jpg" alt
-                                    class="popular__img">
-
-                                <div class="popular__data">
-                                    <h2 class="popular__price">
-                                        <span>INR </span>50 Lakh
-                                    </h2>
-                                    <h3 class="popular__title">
-                                        Aliva Private Garden
-                                    </h3>
-                                    <p class="popular__description">
-                                        Street The Garden City of Miraflores,
-                                        Pune, Maharashtra.
-                                    </p>
-                                </div>
-                            </article>
+                    <div class="popular-container">
+                        <div class="custom-card">
+                          <div class="img-box">
+                            <img src="/house image-6.jpg" alt="" />
+                          </div>
+                          <div class="custom-content">
+                            <h2><span id="INR">INR </span>1.2Cr</h2>
+                            <p class="popular-Heading">Granden City Assat</p>
+                            <p>
+                             Street The Garden City of Miraglores,
+                             Sector - 12, Noida.
+                            </p>
+                            <a href="#" class="read-more">Read More</a>
+                          </div>
                         </div>
+                        <div class="custom-card">
+                            <div class="img-box">
+                              <img src="/popular5.jpg" alt="" />
+                            </div>
+                            <div class="custom-content">
+                              <h2><span id="INR">INR </span>1Cr</h2>
+                              <p class="popular-Heading">Gables Luxurious House</p>
+                              <p>
+                               Street The Garden City of Miraglores,
+                               Delhi, New Delhi.
+                              </p>
+                              <a href="#" class="read-more">Read More</a>
+                            </div>
+                          </div>
+                          <div class="custom-card">
+                            <div class="img-box">
+                              <img src="/house image-4.jpg" alt="" />
+                            </div>
+                            <div class="custom-content">
+                              <h2><span id="INR">INR </span>70 Lach</h2>
+                              <p class="popular-Heading">Granden City Assat</p>
+                              <p>
+                               Street The Garden City of Miraglores,
+                               Mumbai, Navi-Mumbai.
+                              </p>
+                              <a href="#" class="read-more">Read More</a>
+                            </div>
+                          </div>
+                          <div class="custom-card">
+                            <div class="img-box">
+                              <img src="/popular1.jpg" alt="" />
+                            </div>
+                            <div class="custom-content">
+                              <h2><span id="INR">INR </span>2Cr</h2>
+                              <p class="popular-Heading">Granden City Assat</p>
+                              <p>
+                               Street The Garden City of Miraglores,
+                               Meerut, Ganga Nagar.
+                              </p>
+                              <a href="#" class="read-more">Read More</a>
+                            </div>
+                          </div>
+                          <div class="custom-card">
+                            <div class="img-box">
+                              <img src="/house image-2.jpg" alt="" />
+                            </div>
+                            <div class="custom-content">
+                              <h2><span id="INR">INR </span>50 Lakh</h2>
+                              <p class="popular-Heading">Granden City Assat</p>
+                              <p>
+                               Street The Garden City of Miraglores,
+                               Pune, Maharashtra.
+                              </p>
+                              <a href="#" class="read-more">Read More</a>
+                            </div>
+                          </div>
+                          <div class="custom-card">
+                            <div class="img-box">
+                              <img src="/house image-1.jpg" alt="" />
+                            </div>
+                            <div class="custom-content">
+                              <h2><span id="INR">INR </span>1.2Cr</h2>
+                              <p class="popular-Heading">Granden City Assat</p>
+                              <p>
+                               Street The Garden City of Miraglores,
+                               Sector - 30, Noida.
+                              </p>
+                              <a href="#" class="read-more">Read More</a>
+                            </div>
+                          </div>
+                      </div>
 
-                        <div class="swiper-button">
+                        <!-- <div class="swiper-button">
                             <div class="swiper-button-next">
                                 <i class='bx bx-chevron-right'></i>
                             </div>
@@ -185,7 +179,7 @@
                                 <i class='bx bx-chevron-left'></i>
                             </div>
 
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
