--- a/Residences.html
+++ b/Residences.html
@@ -65,8 +65,6 @@
 
                 <!-- Theme change button -->
                 <i class='bx bx-moon  change-theme' id="theme-button"></i>
-
-                <!-- <a href="/assets/html/Register.html" id="login_signup" class="button nav__button">Sign Up / Login</a> -->
             </nav>
         </header>
 
@@ -83,7 +81,7 @@
                     <div class="popular-container">
                         <div class="custom-card">
                           <div class="img-box">
-                            <img src="/house image-6.jpg" alt="" />
+                            <img src="house image-6.jpg" alt="" />
                           </div>
                           <div class="custom-content">
                             <h2><span id="INR">INR </span>1.2Cr</h2>
@@ -97,7 +95,7 @@
                         </div>
                         <div class="custom-card">
                             <div class="img-box">
-                              <img src="/popular5.jpg" alt="" />
+                              <img src="popular5.jpg" alt="" />
                             </div>
                             <div class="custom-content">
                               <h2><span id="INR">INR </span>1Cr</h2>
@@ -111,7 +109,7 @@
                           </div>
                           <div class="custom-card">
                             <div class="img-box">
-                              <img src="/house image-4.jpg" alt="" />
+                              <img src="house image-4.jpg" alt="" />
                             </div>
                             <div class="custom-content">
                               <h2><span id="INR">INR </span>70 Lach</h2>
@@ -125,7 +123,7 @@
                           </div>
                           <div class="custom-card">
                             <div class="img-box">
-                              <img src="/popular1.jpg" alt="" />
+                              <img src="popular1.jpg" alt="" />
                             </div>
                             <div class="custom-content">
                               <h2><span id="INR">INR </span>2Cr</h2>
@@ -139,7 +137,7 @@
                           </div>
                           <div class="custom-card">
                             <div class="img-box">
-                              <img src="/house image-2.jpg" alt="" />
+                              <img src="house image-2.jpg" alt="" />
                             </div>
                             <div class="custom-content">
                               <h2><span id="INR">INR </span>50 Lakh</h2>
@@ -153,7 +151,7 @@
                           </div>
                           <div class="custom-card">
                             <div class="img-box">
-                              <img src="/house image-1.jpg" alt="" />
+                              <img src="house image-1.jpg" alt="" />
                             </div>
                             <div class="custom-content">
                               <h2><span id="INR">INR </span>1.2Cr</h2>
@@ -163,24 +161,9 @@
                                Sector - 30, Noida.
                               </p>
                               <a href="#" class="read-more">Read More</a>
-                            </div>
+                             </div>
                           </div>
-                      </div>
-
-                        <!-- <div class="swiper-button">
-                            <div class="swiper-button-next">
-                                <i class='bx bx-chevron-right'></i>
-                            </div>
-                            <div class="swiper-button-show-more">
-                                <a href=""
-                                    class="residence-button " id="button"></a>
-                            </div>
-                            <div class="swiper-button-prev">
-                                <i class='bx bx-chevron-left'></i>
-                            </div>
-
-                        </div> -->
-
+                        </div>
                     </div>
                 </div>
             </section>
