--- a/Residences.html
+++ b/Residences.html
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </section>
-
+        </main>
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
             <div class="footer__container container grid">
