--- a/Residences.html
+++ b/Residences.html
@@ -289,7 +289,7 @@
 
         <!--=============== MAIN JS ===============-->
         <script src="main.js"></script>
-        <script scr="js/script.js"></script>
+        <script scr="script.js"></script>
 
                 
 </body>
